# saucedemo-auth-automation

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/pages/: base_page.py  inventory_page.py  login_page.py
tests/: conftest.py  explore_playwright.py  test_login.py  test_login_optimized.py  test_setup.py
