[project]
name = "saucedemo-auth-automation"
version = "0.1.0"
description = "Automation tests for saucedemo authentication"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    "allure-pytest>=2.15.2",
]
