[project]
name = "saucedemo-auth-automation"
version = "0.1.0"
description = "Automation tests for saucedemo authentication"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    "allure-pytest>=2.15.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Playwright configuration
addopts = [
    "--browser", "chromium",
    "-v",
    "--tb=short"
]

# Markers for categorizing tests
markers = [
    "login: Login functionality tests",
    "smoke: Critical smoke tests",
    "slow: Tests that take longer to run"
]
