[project]
name = "saucedemo-auth-automation"
version = "0.1.0"
description = "Automation tests for saucedemo authentication"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "allure-pytest>=2.15.2",
    "ruff>=0.14.10",
]
lint = [
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Playwright configuration
addopts = [
    "--browser", "chromium",
    "-v",
    "--tb=short",
    "--alluredir=allure-results",
    "--clean-alluredir"
]

# Markers for categorizing tests
markers = [
    "login: Login functionality tests",
    "smoke: Critical smoke tests",
    "slow: Tests that take longer to run"
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "pytest.*",
    "allure.*",
]
ignore_missing_imports = true
